--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard-template",
+  "name": "cra-template-jsdashboard",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
